--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="engit">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1>votre tire</h1>
 
 </body>
 
