--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="engit">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,9 @@
 
 <body>
     <h1>votre tire</h1>
-
+    <footer>
+        Copyright 2023git
+    </footer>
 </body>
 
 </html>
